--- a/src/App.css
+++ b/src/App.css
@@ -6,36 +6,30 @@ body {
   position: relative;
   overflow-x: hidden;
 }
-
 .container {
   max-width: 900px;
   margin: auto;
 }
-
 .illustration {
   position: absolute;
   right: -50px;
   width: 400px;
   z-index: -10;
 }
-
 h1 {
   font-family: 'Manrope', sans-serif;
   font-size: 3em;
   font-weight: 600;
 }
-
 h2 {
   font-family: 'Manrope', sans-serif;
   font-weight: 600;
 }
-
 .text-bold {
   font-weight: 800;
 }
 
 /* Input */
-
 input {
   padding: 10px 30px;
   border: none;
@@ -44,12 +38,10 @@ input {
   font-size: 1.5em;
   transition: 0.3s;
 }
-
 input:focus {
   box-shadow:  20px 20px 60px #c9cccf, 
               -20px -20px 60px #ffffff;
 }
-
 button[type="submit"] {
   background: #55b9f3;
   padding: 10px 30px;
@@ -63,72 +55,86 @@ button[type="submit"] {
               -20px -20px 60px #ffffff;
   transition: 0.3s;
 }
-
 button[type="submit"]:hover {
   padding: 10px 50px;
   cursor: pointer;
 }
+.icon {
+  display: none;
+  vertical-align: middle;
+}
 
 /* Box */
-
 .flex {
   margin: 50px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
-
 .box {
   border-radius: 50px;
   background: #ecf0f3;
   box-shadow:  20px 20px 60px #c9cccf, 
               -20px -20px 60px #ffffff;
-  margin: 20px 10px;
+  margin: 1em 0.5em;
   transition: 0.3s;
   display: flex;
 }
-
 .box:hover {
   background: #55b9f387;
   box-shadow:  20px 20px 60px #489ecf40, 
               -20px -20px 60px #62d5ff40;
   cursor: pointer;
 }
-
 .box div {
   display: flex;
   align-items: center;
 }
-
 .box div h2 {
   font-size: 1em;
   display: inline;
   margin: 0;
-  padding: 0 40px 0 20px;
+  padding: 0 2em 0 1em;
 }
-
 .box img {
   width: 100px;
-  height: 100px;
   border-radius: 50px 0 0 50px;
 }
 
 @media only screen and (max-width: 800px) {
   .container {
-    margin: 0 10px;
+    margin: 0 20px;
   }
-  
   .illustration {
     display: none;
   }
+}
 
+@media only screen and (max-width: 500px) {
+  body {
+    font-size: 12px;
+  }
+  .container {
+    margin: 0 10px;
+  }
   input {
-    font-size: 1em;
+    padding: 10px 20px;
   }
-
   button[type="submit"] {
-    font-size: 1em;
+    padding: 10px 20px;
   }
-
+  button[type="submit"]:hover {
+    padding: 10px 20px;
+  }
+  .icon {
+    display: block;
+  }
+  .text {
+    display: none;
+  }
+  .box img {
+    width: 80px;
+    border-radius: 40px 0 0 40px;
+  }
 }
 
