--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,6 +1,23 @@
 .modal {
     margin: 10px;
 }
+.close {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-size: 20px;
+    box-shadow: 1px 1px 3px #00000050;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: all 0.1s;
+}
+.close:hover {
+    box-shadow: 2px 2px 6px #00000050;
+}
 .modal h2 {
     margin-bottom: 0;
 }
@@ -8,6 +25,7 @@
     display: inline-block;
     color: #ffffff;
     font-size: 0.7em;
+    margin: 5px 0;
     margin-right: 5px;
     padding: 5px;
     border-radius: 5px;
